- project controller: create, list, update, delete, connect to repository, validate projects

--- a/conf.d/parameters.json.sample
+++ b/conf.d/parameters.json.sample
@@ -8,5 +8,8 @@
     "host" : {
         "info" : "http://example.com",
         "baseUrl" : "/"
+    },
+    "git": {
+        "cmd": "git"
     }
 }
