- user manager tester

--- a/app/composer.json
+++ b/app/composer.json
@@ -15,5 +15,8 @@
             "bower-asset-library": "vendor/bower"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+        "codeception/codeception": "*"
+    }
 }
