--- a/app/composer.json
+++ b/app/composer.json
@@ -7,8 +7,9 @@
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*",
-        "kalyabin/yii2-git-view": "dev-master",
-        "bower-asset/raphael": "^2.1"
+        "bower-asset/raphael": "^2.1",
+        "kalyabin/yii2-git-view": "*",
+        "kalyabin/yii2-hg-view": "*"
     },
     "extra": {
         "asset-installer-paths": {
