--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# composer vendor dir
+vendor
+composer.lock
+
 # phpstorm project files
 .idea
 
@@ -16,4 +20,4 @@ Thumbs.db
 .DS_Store
 
 # local config files
-/conf.d/parameters.json
+conf.d/parameters.json
