--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,8 @@
 {
     "require": {
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*",
+        "yiisoft/yii2": "2.*",
+        "yiisoft/yii2-bootstrap": "~2.0.0",
+        "yiisoft/yii2-swiftmailer": "2.*",
         "kalyabin/yii2-git-view": "*",
         "kalyabin/yii2-hg-view": "*",
         "DmitryBaranovskiy/raphael": "^2.0",
@@ -20,6 +16,10 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
+        "yiisoft/yii2-faker": "*",
+        "yiisoft/yii2-gii": "*",
+        "yiisoft/yii2-debug": "*",
+        "yiisoft/yii2-codeception": "*",
         "codeception/codeception": "*",
         "phpunit/phpunit": "*",
         "internet-design/yii2-svk-tests": "*"
