--- a/app/tests/codeception/unit.suite.yml
+++ b/app/tests/codeception/unit.suite.yml
@@ -4,3 +4,11 @@
 # RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
 
 class_name: UnitTester
+modules:
+    enabled:
+        - Yii2:
+            configFile: 'codeception/config/unit.php'
+            part: init
+            cleanup: true
+        - Asserts
+        - \Helper\Unit
