--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "kalyabin/yii2-git-view": "*",
         "kalyabin/yii2-hg-view": "*",
         "DmitryBaranovskiy/raphael": "^2.0",
-        "yiisoft/yii2-imagine": "~2.0.0"
+        "yiisoft/yii2-imagine": "~2.0.0",
+        "codeception/codeception": "*"
     },
     "extra": {
         "asset-installer-paths": {
@@ -20,7 +21,6 @@
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-codeception": "*",
-        "codeception/codeception": "*",
         "phpunit/phpunit": "*",
         "internet-design/yii2-svk-tests": "*"
     },
