--- a/app/tests/codeception/unit.suite.yml
+++ b/app/tests/codeception/unit.suite.yml
@@ -8,7 +8,7 @@ modules:
     enabled:
         - Yii2:
             configFile: 'codeception/config/unit.php'
-            part: init
+            part: fixtures
             cleanup: true
         - Asserts
         - \Helper\Unit
