--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "kalyabin/yii2-git-view": "*",
         "kalyabin/yii2-hg-view": "*",
         "DmitryBaranovskiy/raphael": "^2.0",
-        "yiisoft/yii2-imagine": "~2.0.0",
-        "codeception/codeception": "*"
+        "yiisoft/yii2-imagine": "~2.0.0"
     },
     "extra": {
         "asset-installer-paths": {
@@ -17,12 +16,10 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "yiisoft/yii2-faker": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-debug": "*",
-        "yiisoft/yii2-codeception": "*",
         "phpunit/phpunit": "*",
-        "internet-design/yii2-svk-tests": "*"
+        "codeception/codeception": "*"
     },
     "repositories": [
         {
