travis migration without interactive mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
   - mysql -e "create database comitka_tests;"
   - cp app/tests/codeception/config/common.local.travis.php app/tests/codeception/config/common.local.php
   - cp app/tests/codeception/config/unit.local.travis.php app/tests/codeception/config/unit.local.php
-  - app/tests/codeception/bin/yii migrate
+  - app/tests/codeception/bin/yii migrate --interactive=0
   - git --version
   - hg --version
 script:
