global codeception for travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - phpenv config-rm xdebug.ini || echo "xdebug is not installed"
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
+  - travis_retry composer global require "codeception/codeception:*"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer update --prefer-dist
 before_script:
@@ -29,4 +30,4 @@ before_script:
   - git --version
   - hg --version
 script:
-  - vendor/bin/codecept --config=app/tests/codeception.yml run unit
+  - php $HOME/.composer/vendor/bin/codecept --config=app/tests/codeception.yml run unit
