--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,5 @@ before_script:
   - git --version
   - hg --version
 script:
-  - php $HOME/.composer/vendor/bin/codecept --config=app/tests/codeception.yml run unit
+  - cd app/tests
+  - php $HOME/.composer/vendor/bin/codecept run unit
