--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - phpenv config-rm xdebug.ini || echo "xdebug is not installed"
   - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
-  - travis_retry composer global require "codeception/codeception:*"
+  - travis_retry composer global require "codeception/codeception:~2.2"
   - travis_retry export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer update --prefer-dist
 before_script:
