--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ install:
   - travis_retry composer update --prefer-dist
 before_script:
   - mysql -e "create database comitka_tests;"
-  - cp app/tests/codeception/config/common.local.travis.php app/tests/codeception/config/common.local.php
-  - cp app/tests/codeception/config/unit.local.travis.php app/tests/codeception/config/unit.local.php
+  - cp app/tests/codeception/config/common.local.sample.php app/tests/codeception/config/common.local.php
+  - cp app/tests/codeception/config/unit.local.sample.php app/tests/codeception/config/unit.local.php
   - cp app/tests/codeception.yml.dist app/tests/codeception.yml
   - app/tests/codeception/bin/yii migrate --interactive=0
   - git --version
