--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,8 +30,8 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - appveyor DownloadFile https://getcomposer.org/composer.phar
   - php composer.phar config -g github-oauth.github.com %GITHUB_PUBLIC_TOKEN%
-  - php composer.phar global require "fxp/composer-asset-plugin:~1.2.0" --no-interaction --no-progress
-  - php composer.phar global require "codeception/codeception:~2.2" --no-interaction --no-progress
+  - php composer.phar global require "fxp/composer-asset-plugin:~1.2.0" --no-interaction --no-progress  --no-ansi
+  - php composer.phar global require "codeception/codeception:~2.2" --no-interaction --no-progress --no-ansi
   - php composer.phar update --no-interaction --prefer-dist  --no-progress --no-ansi
 before_test:
   - mysql -uroot -pPassword12! -e "CREATE DATABASE comitka_tests"
@@ -47,4 +47,4 @@ before_test:
   - php --version
   - cd %APPVEYOR_BUILD_FOLDER%
 test_script:
-  - vendor/codeception/codeception/codecept.bat run unit --config=app/tests/codeception.yml --debug --steps
+  - vendor/bin/codecept run unit --config=app/tests/codeception.yml --debug --steps
