--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,12 +2,9 @@ build: false
 shallow_clone: true
 platform:
   - x86
-  - x64
-  - Any CPU
 cache:
   - c:\tools\php
-  - c:\projects\comitka\vendor
-  - '%LOCALAPPDATA%\Composer\files'
+  - '%LOCALAPPDATA%\Composer\cache'
 services:
   - mysql
 init:
@@ -40,9 +37,6 @@ install:
   - php composer.phar update --no-interaction --prefer-dist  --no-progress --no-ansi --quiet
 before_test:
   - mysql -uroot -pPassword12! -e "CREATE DATABASE comitka_tests"
-  - cd %APPVEYOR_BUILD_FOLDER%\app\tests\codeception\config
-  - copy /Y common.local.sample.php common.local.php
-  - copy /Y unit.local.sample.php unit.local.php
   - cd %APPVEYOR_BUILD_FOLDER%\app\tests
   - copy /Y codeception.yml.dist codeception.yml
   - cd %APPVEYOR_BUILD_FOLDER%\app\tests\codeception\bin
